--- a/app/views/webclass/media/index.html.erb
+++ b/app/views/webclass/media/index.html.erb
@@ -1,22 +1,13 @@
 <div class='row'>
   <div class='span-l'>
-    <h4 class='border'>[<%= @course.name %>] 文件上传</h4>
-    <%= render 'shared/file_upload_form', record: @medium, field: :file, url: [:webclass, @current_webclass, @course, :media]%>
-    <table class='table'>
-      <thead>
-        <tr class="success">
-          <th width='60'></th>
-          <th>文件名</th>  
-          <th width='60'>大小</th>
-          <th width='100'>创建时间</th>
-          <th width='100'>操作</th>
-        </tr>
-      </thead>
-      <tbody id='media-list'>
-        <%= render @media %>
-      </tbody>
-    </table>
-    <%= paginate @media %>
+    <h4 class='border'>
+      [<%= @course.name %>] 文件上传
+      <%= link_to [:webclass, @current_webclass, @course], class: "btn btn-success btn-small pull-right" do %>
+        <i class="icon-ok icon-white"></i>
+        <span>完成上传</span>
+      <% end %>
+    </h4>
+    <%= render 'shared/file_upload_form', record: @medium, url: [:webclass, @current_webclass, @course, :media] %>
   </div>
   <div class='span-r pull-right'>
     <%= render 'webclass/courses/courses' %>
