--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -20,7 +20,12 @@ li .content{
 }
 
 li .content span.time{
-    color: #777;
+    color: #999;
+}
+
+li .content .item span{
+    margin-right: 10px;
+    font-size: 12px;
 }
 
 h4.border {
@@ -42,11 +47,6 @@ h4.border {
 .item ul li{
     color: #666;
     font-size: 12px;
-}
-
-.item .avatar, .avatar {
-    margin-top: 7px;
-    margin-bottom: 7px;
 }
 
 .item .title{
