--- a/app/views/webclasses/_meta.html.erb
+++ b/app/views/webclasses/_meta.html.erb
@@ -1,4 +1,4 @@
- <table id='meta' class='table'>
+ <table class='meta table'>
   <tbody>
    <tr>
      <td><span class="badge badge-success">2</span></td> <td>位老师</td>
