--- a/app/assets/stylesheets/webclasses.css.scss
+++ b/app/assets/stylesheets/webclasses.css.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the webclasses controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+table.meta tr td:nth-child(1){
+  text-align: right;
+}
+table.meta tr td:nth-child(2){
+  text-align :left;
+}
