--- a/app/views/webclass/members/_member.html.erb
+++ b/app/views/webclass/members/_member.html.erb
@@ -1,4 +1,21 @@
 <tr id='member-<%= member.id %>'>
-  <%= render partial: 'member_content', locals: {member: member} %>
+  <td><%= link_to user_avatar_tag(member.user, 's'), member.user %></td>
+  <td>
+    <%= member.name %>
+  </td>
+  <td>
+    <%= format_datetime member.created_at %>
+  </td>
+  <td>
+    <p>
+    <%- @parents.select{|parent| parent.student_id == member.id}.each do |parent| %>
+      <p>
+        <%= parent.name %> &nbsp; &nbsp;    <%= format_datetime parent.created_at %>
+      </p>
+    <% end %>
+  </td>
+  <td>
+    <%= link_to '发送班邮', [:new_message, :webclass, @current_webclass, member], disable_with: "请稍后...", class: 'btn btn-success btn-small', remote: true, data: {type: 'script'} %>
+  </td>
 </tr>
 
