--- a/app/views/webclass/members/index.html.erb
+++ b/app/views/webclass/members/index.html.erb
@@ -1,15 +1,43 @@
+<script>
+  function change_role(member_id, role) {  
+    jQuery.ajax({
+      url: "<%= change_role_webclass_webclass_member_path(@current_webclass, 0) %>",
+      type: "GET",
+      dataType: "script",
+      data: {"role" : role, "member_id": member_id},
+      success: function(data) {
+        
+      }
+    });
+  }
+</script>
+
 <div class='row'>
   <div class='span-l'>
-    <h4>所有成员</h4>
-    
-    <%= render 'list' %>
-
+    <h4>
+      成员列表
+    </h4>
+    <table class='table table-bordered'>
+      <thead>
+        <tr class="success">
+          <th width='80'>学生</th>
+          <th>姓名</th>
+          <th>加入时间</th>  
+          <th>家长</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody id='member-list'>
+        <form>
+          <%= render partial: 'member', collection: @students, as: :member %>
+        </form>
+      </tbody>
+    </table>
   </div>
-  <div class='span-r pull-right'>
-    <%= render 'menu' %>
+  <div class='span-r'>
+    <h4>
+      老师列表
+    </h4>
+    <%= render 'teachers' %>
   </div>
 </div>
-
-<%- content_for :left do %>
-  <h3><%= @current_webclass.name %></h3>
-<% end %>
