--- a/app/views/webclass/messages/index.html.erb
+++ b/app/views/webclass/messages/index.html.erb
@@ -14,7 +14,7 @@
         <%= render partial: 'inbox_messages', collection: @messages, as: :message %>
       </tbody>
     </table>
-
+    <%= paginate @messages %>
   </div>
   <div class='span-r pull-right'>
     <%= render 'menu' %>
