--- a/app/views/webclass/albums/show.html.erb
+++ b/app/views/webclass/albums/show.html.erb
@@ -6,7 +6,7 @@
         <i class="icon-edit icon-white"></i>
         <span>修改相册</span>
       <% end %>
-      <%= link_to [:webclass, @current_webclass, @album, :images], class: 'btn btn-info pull-right btn-small span' do %>
+      <%= link_to [:webclass, @current_webclass, @album, :images], class: 'btn btn-success pull-right btn-small span' do %>
         <i class="icon-plus icon-white"></i>
         <span>添加照片</span>
       <% end %>
