--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,7 @@
 <div class='row'>
-  <div class='span-l'>
-    <%= render 'user/activities/nav' %>
-  </div>
-  <div class='span-r pull-right'>
-    <%= render 'webclasses' %>
-    <%= render 'groups' %>
-  </div>
+  <%- if @current_user.id == current_user.id %>
+    <%= render 'me' %>
+  <% else %>
+    <%= render 'other' %>
+  <% end %>
 </div>
