--- a/app/views/webclass/assignments/index.html.erb
+++ b/app/views/webclass/assignments/index.html.erb
@@ -1,31 +1,7 @@
 <div class='row'>
   <div class='span-l'>
     <ul>
-    <%- @assignments.each do |assignment| %>
-      <li id='assignment-<%= assignment.id %>'>
-        <h4>[<%= assignment.course.name %>] <%= assignment.title %></h4>
-        <div class='avatar'>
-          <%= user_avatar_tag(assignment.creator, 's') %>
-        </div>
-        <div class='content'>
-          <p><%= assignment.body %></p>
-          <div class='item item-info clearfix'>
-            <%- if assignment.creator_id == current_user.id %>
-              <%= link_to '编辑', [:edit, :webclass, @current_webclass, assignment] %>
-              <%= link_to '删除', [:webclass, @current_webclass, assignment], method: :delete, remote: true, data: {type: "script"}, confirm: "是否确定删除 #{assignment.title}" %>
-            <% else %>
-              <%= link_to assignment.creator.nickname, assignment.creator %>
-            <% end %>
-            <div class='pull-right'>
-              <span class='time'>
-                <%= format_datetime assignment.created_at %>
-              <span>
-            </div>
-          </div>
-        </div>
-        <h4 class='border'></h4>
-      </li>
-    <% end %>
+      <%= render @assignments %>
     </ul>
 
   </div>
