--- a/app/views/webclasses/_menu.html.erb
+++ b/app/views/webclasses/_menu.html.erb
@@ -11,8 +11,8 @@
     <%= tab.admin "管理", admin_webclass_webclass_settings_path(@current_webclass) %>
   <% end %>
   <%- if @current_webclass_member and @current_webclass_member.active %>
-    <%- if current_user.has_role? :admin, @current_webclass  %>
-      <%= link_to "班级管理", admin_webclass_path(@current_webclass), class: 'btn btn-success pull-right span' %>
+    <%- if current_user.id == @current_webclass.creator_id  %>
+      <%= link_to "班级管理", admin_webclass_webclass_settings_path(@current_webclass), class: 'btn btn-info pull-right span' %>
     <% else %>
       <%= link_to "退出班级", logout_webclass_path(@current_webclass), class: 'btn btn-inverse pull-right span' %>
     <% end %>
