--- a/app/views/user/albums/index.html.erb
+++ b/app/views/user/albums/index.html.erb
@@ -1,6 +1,7 @@
+<%= render 'user/albums/nav' %>
 <div class='row'>
+  
   <div class='span-l'>
-    <h4 class='border'>最新上传</h4>
     <ul>
       <%- @images.each do |image| %>
         <li>
