--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -4,7 +4,7 @@
     <%= link_to user_avatar_tag(post.creator, 's'), post.creator %>
   </div>
   <div class='content'>    
-    <h4>
+    <h4 class='border'>
       <%= link_to post.title, [namespace, post].flatten %>
 
       <%= link_to '删除', [namespace, post].flatten, method: :delete, class: 'btn btn-small btn-danger pull-right span', confirm: "是否删除 #{post.title}" %>
