--- a/app/views/user/albums/_form.html.erb
+++ b/app/views/user/albums/_form.html.erb
@@ -1,17 +1,4 @@
-<%= form_for(@me_school_class) do |f| %>
-  <% if @me_school_class.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@me_school_class.errors.count, "error") %> prohibited this me_school_class from being saved:</h2>
-
-      <ul>
-      <% @me_school_class.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for @album, url: [:user, current_user, @album], validate: true do |f| %>
+  <%= f.input :name, label: '名称' %>
+  <%= f.submit value: '创建', class: 'btn btn-info', disable_with: "正在提交..." %>
 <% end %>
