--- a/app/views/user/categories/_category.html.erb
+++ b/app/views/user/categories/_category.html.erb
@@ -1,5 +1,3 @@
 <tr id='category-<%= category.id %>'>
-  <td><%= category.name %></td>
-  <td></td>
-  <td></td>
+  <%= render 'category_content', category: category %>
 </tr>
