--- a/app/views/user/categories/_form.html.erb
+++ b/app/views/user/categories/_form.html.erb
@@ -1,7 +1,5 @@
-<%= simple_form_for @category, :validate => true, url: me_categories_path, remote: true, html: {class: 'form-stacked', id: 'category-form', data: {type: "script", method: :post} } do |f| -%> 
+<%= simple_form_for @category, :validate => true, url: [:user, current_user, :categories], remote: true, html: {id: 'category-form', data: {type: "script", method: :post} } do |f| -%> 
   <%= f.error_notification %>
   <%= f.input :name, :label => '名称' %>
-  <div class="actions">
-    <%= f.submit '创建', :class=>'btn btn-primary', disable_with: "正在提交..." %>
-  </div>
+  <%= f.submit '提交', :class=>'btn btn-primary', disable_with: "正在提交..." %>
 <% end %>
