--- a/app/views/user/posts/_categories.html.erb
+++ b/app/views/user/posts/_categories.html.erb
@@ -1,10 +1,15 @@
 <%- if @categories.size > 0 %>
-  <p>
-    <%= tabs_tag(:namespace => :category_nav, :open_tabs => {:class => "nav nav-tabs nav-stacked"}, :builder =>     MenuTabBuilder) do |tab| %>
-      <% @categories.each do |c| %>
-        <%= tab.try "c_#{c.id}", c.name, [:user, @current_user, c] %>
-      <%- end %>
-    <% end %>
-  </p>
+  <h4>文章分类</h4>
+  <table class='table'>
+    <tbody>
+      <%- @categories.each do |category| %>
+        <tr>
+          <td>
+            <%= link_to category.name, [:user, @current_user, category] %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% end %>
 
