--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,8 +1,2 @@
-<div class='left'>
-  <%= render 'users/profile' %>
-  <%= render 'me/menu' %>
-</div>
-<div class='right'>
-  <%= render 'me/posts/nav' %>
-  <%= render 'form' %>
-</div>
+<h4 class='border'>编辑文章</h4>
+<%= render 'form' %>
