--- a/app/views/users/_menu.html.erb
+++ b/app/views/users/_menu.html.erb
@@ -3,15 +3,14 @@
     <%= tabs_tag(:namespace => :user_nav, :open_tabs => {:class => "nav nav-tabs nav-stacked" }, :builder => MenuTabBuilder)    do |tab| %>
       <%= tab.home raw("<i class='icon icon-user'></i> 我的主页"), @current_user %>
       <%= tab.activities raw("<i class='icon icon-envelope'></i> 我的私信"), [:user, @current_user, :messages] %>
-      <%= tab.notifications raw("<i class='icon icon-bullhorn'></i> 我的提醒"), [:user, @current_user, :notifications] %>
      	<%= tab.posts raw("<i class='icon icon-edit'></i> 我的文章"), [:user, @current_user, :posts] %>
       <%= tab.albums raw("<i class='icon icon-picture'></i> 我的相册"), [:user, @current_user, :albums] %>
-      <%= tab.media raw("<i class='icon icon-folder-open'></i> 我的课件"), [:user, @current_user, :folders] %>
+      <%= tab.folders raw("<i class='icon icon-folder-open'></i> 我的课件"), [:user, @current_user, :folders] %>
       <%= tab.questions raw("<i class='icon icon-question-sign'></i> 我的问答"), [:user, @current_user, @questions] %>
-      <%= tab.questions raw("<i class='icon icon-group'></i> 我的群组"), [:user, @current_user, :groups] %>
-      <%= tab.questions raw("<i class='icon icon-calendar'></i> 我的问答"), [:user, @current_user, :webclasses] %>
+      <%= tab.groups raw("<i class='icon icon-group'></i> 我的群组"), [:user, @current_user, :groups] %>
+      <%= tab.webclasses raw("<i class='icon icon-calendar'></i> 我的班级"), [:user, @current_user, :webclasses] %>
 
-    	<%= tab.likes raw("<i class='icon icon-heart'></i> 我的收藏"), [:user, @current_user, :likes] %>
+    	<%= tab.likes raw("<i class='icon icon-heart'></i> 我的喜欢"), [:user, @current_user, :likes] %>
     	<%= tab.settings raw("<i class='icon icon-cog'></i> 个人设置"), user_settings_path %>    
     <% end %>
   </div>
