--- a/app/views/shared/folders/_list.html.erb
+++ b/app/views/shared/folders/_list.html.erb
@@ -1,14 +1,18 @@
-<table class='table'>
-  <tbody id='folder-list'>
-    <%- @folders.each do |folder| %>
-      <tr>
-        <td>
-          <%= link_to [:user, @current_user, folder] do %>
-            <i class='icon icon-folder-close'></i>
-            <span><%= folder.name %></span>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= link_to '目录管理', [:user, current_user, :folders], class: 'btn btn-info' %>
+<%- if @folders.size > 0 %>
+  <h4>目录列表</h4>
+  <table class='table'>
+    <tbody id='folder-list'>
+      <%- @folders.each do |folder| %>
+        <tr>
+          <td>
+            <%= link_to [:user, @current_user, folder] do %>
+              <i class='icon icon-folder-close'></i>
+              <span><%= folder.name %></span>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
