--- a/app/views/user/albums/show.html.erb
+++ b/app/views/user/albums/show.html.erb
@@ -1,23 +1,17 @@
-<%= render 'user/albums/nav' %>
 <div class='row'>
   <div class='span-l'>
     <h4 class='border'>
       <%= @album.name %>
       <%- if @current_user.id == current_user.id %>
-        <%= link_to [:edit, :user, current_user, @album], class: 'btn btn-info pull-right btn-small span', remote: true, data: {type: 'script'} do %>
-          <i class="icon-edit icon-white"></i>
-          <span>修改相册</span>
-        <% end %>
-      
-        <%= link_to [:user, current_user, @album, :images], class: 'btn btn-success pull-right btn-small span'  do %>
-          <i class="icon-plus icon-white"></i>
-          <span>添加照片</span>
-        <% end %>
+        <%= render partial: 'shared/images/add_btn', locals: {namespace: [:user, current_user], albums: @albums} %>
       <% end %>
     </h4>
-    <%= render 'user/albums/images' %>
+    <%= render partial: 'shared/albums/images', locals: {namespace: [:user, @current_user]} %>
   </div>
   <div class='span-r pull-right'>
-    <%= render 'user/albums/albums' %>
+    <%- if @current_user.id == current_user.id %>
+      <%= link_to "相册管理", [:user, current_user, :albums], class: 'btn btn-info' %>
+    <% end %>
+    <%= render partial: 'shared/albums/list', locals: {namespace: [:user, @current_user], albums: @albums} %>
   </div>
 </div>
