--- a/app/views/user/media/index.html.erb
+++ b/app/views/user/media/index.html.erb
@@ -1,14 +1,28 @@
 <div class='row'>
   <div class='span-l'>
     <h4 class='border'>
-      <%= @folder.name %>
+      全部课件
       <%= render partial: 'shared/media/add', locals: {namespace: [:user, current_user], folders: @folders} %>
     </h4>
-    <%= render 'shared/file_upload_form', record: Medium.new, url: [:user, current_user, @folder, :media] %>
+    <table class='table'>
+      <thead>
+        <tr class="success">
+          <th width='60'></th>
+          <th>文件名</th>  
+          <th width='60'>大小</th>
+          <th width='60'>目录</th>
+          <th width='100'>创建时间</th>
+          <th width='100'>操作</th>
+        </tr>
+      </thead>
+      <tbody id='media-list'>
+        <%= render partial: 'shared/media/medium', collection: @media, locals: {namespace: [:user, current_user]} %>
+      </tbody>
+    </table>
+    <%= paginate @media %>
   </div>
+
   <div class='span-r pull-right'>
-    <p class="text-warning">
-      支持doc/excel/ppt/pdf等格式的文件，文件大小不超过30M
-    </p>
+    <%= render partial: 'shared/folders/list', locals: {namespace: [:user, current_user], folders: @folders}  %>
   </div>
 </div>
