--- a/app/views/group/messages/new.html.erb
+++ b/app/views/group/messages/new.html.erb
@@ -1,12 +1,17 @@
 <div class='row'>
   <div class='span-l'>
     <h4>写信</h4>
-    
-    <%= render 'form' %>
+    <%= simple_form_for [:webclass, @current_webclass, @message], :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
+      <%= f.error_notification %>
+      <%= f.association :recipient, :label => render('contacts'), :collection => @group_members, as: :grouped_select, group_method: :members, group_label_method: :name, value_method: :user_id, input_html: {multiple: 'multiple', id: 'recipient_ids'} %>
 
+      <%= f.input :title, :class=>'xlarge', :label => '标题' %>
+      <%= f.input :body, label: '内容' %>
+      <%= f.submit '发送', :class=>'btn btn-primary', disable_with: "正在提交..." %>
+    <% end %>
   </div>
   <div class='span-r pull-right'>
-    <%= render 'menu' %>
+    <%= render 'shared/messages/actions' %>
   </div>
 </div>
 
