--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,2 +1,5 @@
-<h4 class='border'>编辑文章</h4>
+<h4 class='border'>
+  编辑文章
+  <%= render partial: 'shared/posts/show_btn', locals: {namespace: [:user, @current_user]} %>
+</h4>
 <%= render 'form' %>
