--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
   <div class='span-l'>
     <ul>
-      <%= render 'shared/post', post: @post, namespace: [:user, @current_user], truncate_size: nil %>
+      <%= render 'shared/posts/post', post: @post, namespace: [:user, @current_user], truncate_size: nil %>
     </ul>
     <h4 class='border'>回复列表</h4>
     <ul id='comment-list' class='unstyled'>
