--- a/app/views/user/settings/_nav.html.erb
+++ b/app/views/user/settings/_nav.html.erb
@@ -1,7 +1,6 @@
 <%= tabs_tag(:namespace => :setting_nav, :open_tabs => {:class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
-  <%= tab.basic "基本信息", me_settings_path %>
-  <%= tab.photo "头像", me_photos_path %>
-  <%= tab.password '修改密码', me_passwords_path %>
-  <%= tab.certification "申请认证", me_certifications_path %>
+  <%= tab.basic "基本信息", [@current_namespace, :settings].flatten %>
+\  <%= tab.password '修改密码', [@current_namespace, :passwords].flatten %>
+  <%= tab.certification "申请认证", [@current_namespace, :certifications].flatten %>
 <% end %>
 
